create a new feature on album
added new html, css, and photos.

--- a/albumdrop.html
+++ b/albumdrop.html
@@ -70,6 +70,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="./album.html">My Photos</a></li>
+                                <li><a class="dropdown-item" href="./MyProject.html">My Project</a></li>
                                 <li><a class="dropdown-item" href="#">Random Pict</a></li>
                                 <li><a class="dropdown-item" href="#">Videos</a></li>
                             </ul>
@@ -125,15 +126,18 @@
         <!-- End Navbar -->
 
         <!-- jumbotron -->
-        <section id="materiBG" style="overflow-y: hidden !important; overflow-x: hidden !important;">
+        <section id="albumdrop" style="overflow-y: hidden !important; overflow-x: hidden !important;">
             <div class="container">
                 <div class="row">
-                    <h1 class="nunito text-white text-center" style="font-weight: 755; font-style: italic;"
-                        data-aos="fade-right" id="materiJudul" data-aos-duration="1000">
-                        Albumku!</h1>
-                    <p class="nunito text-white text-center" id="deskripsi" data-aos="fade-left"
-                        data-aos-duration="1000" style="margin-bottom: 3em;">Semua yang ada disini adalah kumpulan momen yang seru dan rasanya saya ingin mengulanginya lagi.
-                    </p>
+                    <h1 class="nunito text-white text-center"
+                        style="font-weight: 755; font-style: italic; margin-top: 3em;" data-aos="fade-right" id="textS"
+                        data-aos-duration="1000">
+                        Albumku!
+                    </h1>
+                    <p class="nunito text-white text-center" id="textS" data-aos="fade-left" data-aos-duration="1000"
+                        style="font-size: 15px; margin-bottom: 3em;">Sekumpulan
+                        foto dan video yang
+                        sangat berkesan bagiku ..</p>
                 </div>
             </div>
             <div class="svg-container">
@@ -152,8 +156,7 @@
                 <div class="comment-info"></div>
             </div>
             <div class="materi-content">
-                <h1 class="text-center josefin" id="h1Materi" style="font-weight: 400;">Pilih Materi Yang Ingin Kamu
-                    Cari!
+                <h1 class="text-center josefin" id="h1Materi" style="font-weight: 400;">Pilih opsi dari album mana yang ingin kamu buka!
                     <hr>
                 </h1>
             </div>
@@ -161,7 +164,10 @@
                 <a href="./album.html" class="btn btn-secondary materi-btn" style="text-decoration: none;">
                     My Photos
                 </a>
-                <a href=".#" class="btn btn-secondary materi-btn" style="text-decoration: none;">
+                <a href="./MyProject.html" class="btn btn-secondary materi-btn" style="text-decoration: none;">
+                    My Project
+                </a>
+                <a href="#" class="btn btn-secondary materi-btn" style="text-decoration: none;">
                     Random Pict
                 </a>
                 <a href="#" class="btn btn-secondary materi-btn" style="text-decoration: none;">
