--- a/index.html
+++ b/index.html
@@ -72,15 +72,13 @@
                         <li class="nav-item">
                             <a class="nav-link nunito" aria-current="page" href="#">Beranda</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link nunito" aria-current="page" onclick="scrollToAbout()">Tentangku</a>
-                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle nunito" href="./albumdrop.html" role="button">
                                 Albumku
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="./album.html">My Photos</a></li>
+                                <li><a class="dropdown-item" href="./MyProject.html">My Project</a></li>
                                 <li><a class="dropdown-item" href="#">Random Pict</a></li>
                                 <li><a class="dropdown-item" href="#">Videos</a></li>
                             </ul>
