--- a/mikrotik.html
+++ b/mikrotik.html
@@ -70,6 +70,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="./album.html">My Photos</a></li>
+                                <li><a class="dropdown-item" href="./MyProject.html">My Project</a></li>
                                 <li><a class="dropdown-item" href="#">Random Pict</a></li>
                                 <li><a class="dropdown-item" href="#">Videos</a></li>
                             </ul>
